# apr

./: .gitignore  CMakeLists.txt  copy.sh  pack.sh  readme.txt
env/: Graphs.m.base  Lab1_Task10.txt  Lab1_Task2.txt  Lab1_Task3.txt  Lab1_Task4.txt  Lab1_Task5.txt  Lab1_Task6.txt  Lab1_Task7.txt  Lab1_Task9.txt  Lab5_1.m.base  Lab5_2_RK4.m.base
include/: GeneticAlgorithm.hxx  GradientAlgorithms.hxx  Matrix.hxx  NumInt.hxx  SearchAlgorithms.hxx
octave/: Lab1.m  Lab2_f1.m  Lab2_f2.m  Lab3.m  Lab4.m
src/: CMakeLists.txt  GeneticAlgorithm.cxx  GradientAlgorithms.cxx  Lab1.cxx  Lab2.cxx  Lab3.cxx  Lab4.cxx  Lab4_3.cxx  Lab4_4.cxx  Lab4_5.cxx  Lab5.cxx  Matrix.cxx  NumInt.cxx  SearchAlgorithms.cxx
